[gd_scene load_steps=14 format=3 uid="uid://catd034o1usg5"]

[ext_resource type="Script" path="res://Lab_Room/Lab_post_game_3.gd" id="1_cnm4p"]
[ext_resource type="PackedScene" uid="uid://be2ilbacpejo3" path="res://Lab_Room/Lab.tscn" id="2_28fp1"]
[ext_resource type="PackedScene" uid="uid://bajir8gidmg11" path="res://Lab_Room/monkey.tscn" id="3_145la"]
[ext_resource type="PackedScene" uid="uid://d00o0xpgxm5u" path="res://Lab_Room/beacon.tscn" id="4_02xm2"]
[ext_resource type="PackedScene" uid="uid://cu7w4q6q4ynh7" path="res://Lab_Room/access_panel.tscn" id="5_0mmau"]
[ext_resource type="PackedScene" uid="uid://nhtmbhg6eyno" path="res://Lab_Room/door.tscn" id="6_qwbr5"]
[ext_resource type="PackedScene" uid="uid://8vll2l0ixeni" path="res://Lab_Room/table.tscn" id="7_r31or"]
[ext_resource type="PackedScene" uid="uid://cbt3ka5e62wdm" path="res://Lab_Room/weapon_part.tscn" id="8_e0gn5"]
[ext_resource type="PackedScene" uid="uid://cx70wwnw3nvsj" path="res://Lab_Room/page.tscn" id="9_1navr"]
[ext_resource type="Texture2D" uid="uid://dnqmca8m5x8xe" path="res://Lab_Room/assets/note_3.png" id="10_ifqva"]
[ext_resource type="PackedScene" uid="uid://bekhfx7rlge5c" path="res://Title_Screen/menu_button.tscn" id="10_rd4yi"]
[ext_resource type="PackedScene" uid="uid://b2brr7ypk1g7t" path="res://Lab_Room/gun.tscn" id="12_wx3ig"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ste5r"]
size = Vector2(30.7115, 76.7874)

[node name="Main" type="Node2D"]
script = ExtResource("1_cnm4p")

[node name="StaticBody2D" parent="." instance=ExtResource("2_28fp1")]

[node name="monkey" parent="." instance=ExtResource("3_145la")]
z_index = 1
position = Vector2(-127, -102)

[node name="Beacon" parent="." instance=ExtResource("4_02xm2")]
position = Vector2(384, 230)

[node name="AccessPanel" parent="." instance=ExtResource("5_0mmau")]
position = Vector2(-125, 10)
scale = Vector2(1.03887, 1.08767)

[node name="Door" parent="." instance=ExtResource("6_qwbr5")]
position = Vector2(492, 174)
scale = Vector2(0.68, 0.640001)

[node name="table" parent="." instance=ExtResource("7_r31or")]
position = Vector2(291, 427)
scale = Vector2(0.720002, 0.679999)

[node name="weapon_part" parent="." instance=ExtResource("8_e0gn5")]
position = Vector2(693, 340)
rotation = 1.5708
scale = Vector2(1.64159, 2.18786)

[node name="exit" type="Area2D" parent="."]
position = Vector2(693, 340)
rotation = 1.5708
scale = Vector2(1.64159, 2.18786)

[node name="CollisionShape2D" type="CollisionShape2D" parent="exit"]
position = Vector2(-124.396, 93.2419)
shape = SubResource("RectangleShape2D_ste5r")

[node name="Page" parent="." instance=ExtResource("9_1navr")]
visible = false
position = Vector2(484, 393)
texture = ExtResource("10_ifqva")

[node name="Label" type="Label" parent="Page"]
offset_left = -68.0
offset_top = 220.0
offset_right = 88.0
offset_bottom = 243.0
text = "Press Enter To Close"

[node name="Menu button" parent="." instance=ExtResource("10_rd4yi")]

[node name="Gun" parent="." instance=ExtResource("12_wx3ig")]

[connection signal="access" from="AccessPanel" to="." method="_on_access_panel_access"]
[connection signal="read" from="table" to="." method="_on_table_read"]
[connection signal="weapon1" from="weapon_part" to="." method="_on_weapon_part_weapon_1"]
[connection signal="body_entered" from="exit" to="." method="_on_exit_body_entered"]
